feat: Implement YubiKey support for secure key storage and management

--- a/.env
+++ b/.env
@@ -9,16 +9,13 @@ SESSION_TIMEOUT=1800
 # API Keys
 DEXTOOLS_API_KEY=your_dextools_api_key
 COINMARKETCAP_API_KEY=your_coinmarketcap_api_key
+COINGECKO_API_KEY=your_coingecko_api_key
+CRYPTODATADOWNLOAD_API_KEY=your_cryptodatadownload_api_key
 
 # Database Configuration
-DB_PATH=./data/market_data.db
-
-# Application Configuration
-PORT=3000
-NODE_ENV=development
-VITE_API_URL=http://localhost:3000
-
 DATABASE_URL=sqlite:trading_bot.db
+
+# Trading Configuration
 API_KEY=your_api_key_here
 API_SECRET=your_api_secret_here
 MODEL_PATH=models
