--- a/config.toml
+++ b/config.toml
@@ -11,10 +11,7 @@ latency_ms = 1000.0
 
 [telegram]
 bot_token = "YOUR_BOT_TOKEN"
-admin_chat_id = 0
-allowed_chat_ids = []
-notification_enabled = true
-command_prefix = "/"
+chat_id = "YOUR_CHAT_ID"
 
 [strategy]
 rsi_period = 14
@@ -49,6 +46,9 @@ max_risk_per_trade = 0.02
 max_daily_loss = 0.05
 stop_loss_percentage = 0.02
 risk_reward_ratio = 2.0
+trading_pairs = ["BTC/USD", "ETH/USD"]
+risk_level = 0.5
+take_profit = 0.10
 
 [api]
 coingecko_api_key = ""
