--- a/Cargo.toml
+++ b/Cargo.toml
@@ -44,7 +44,7 @@ rand = "0.8"
 yubikey = "0.4"  # YubiKey hardware support
 
 # ML
-tch = "0.19.0"
+tch = { version = "0.20.0" }
 ndarray = "0.15"
 
 # Monitoring
@@ -69,6 +69,17 @@ lazy_static = "1.4.0"
 # Testing
 tempfile = "3.8"  # Moving from dev-dependencies to main dependencies
 
+# System Keychain Access
+keyring = "3.0"
+
+# Solana Interaction
+solana-sdk = "2.0.3" # Check for latest compatible version
+solana-client = "2.0.3" # Check for latest compatible version
+spl-associated-token-account = "3.0.2" # For finding ATAs
+
+# Additional dependencies
+rpassword = "7.3" # Add for reading password securely
+
 [dev-dependencies]
 tokio-test = "0.4"
 mockall = "0.11"
@@ -84,4 +95,8 @@ section = "utils"
 priority = "optional"
 
 [package.metadata.rpm]
-requires = ["libykneomgr-devel"] 
+requires = ["libykneomgr-devel"]
+
+[[bin]]
+name = "setup_key"
+path = "src/bin/setup_key.rs" 
