--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,11 @@ edition = "2021"
 authors = ["Your Name <your.email@example.com>"]
 description = "A high-performance cryptocurrency trading bot with ML capabilities"
 
+[features]
+default = []
+# Make cuda feature enable the optional tch dependency and tch's own cuda feature
+cuda = ["dep:tch", "tch?/cuda"]
+
 [dependencies]
 # Async runtime
 tokio = { version = "1.28", features = ["full"] }
@@ -42,7 +47,8 @@ base64 = "0.22"
 rand = "0.8"
 
 # ML
-tch = { version = "0.20.0" }
+# Make tch optional by default
+tch = { version = "0.20.0", optional = true }
 ndarray = "0.15"
 
 # Monitoring
