--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,19 +1,79 @@
 [package]
-name = "tch_test"
+name = "trading_bot"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-#tch = "0.20.0"
-#tch = { version = "0.20.0", features = ["download-libtorch"] }
-#tch = { version = "0.20.0", features = ["cuda", "download-libtorch"] }
-#tch = { version = "0.13.0", features = ["cuda"] }
-#tch = { version = "0.13.0" } #, features = ["cuda", "download-libtorch"] }
-#tch = { version = "0.19.0" }
-tch = { version = "0.15.0", features = ["cuda", "download-libtorch"] }
-#tch = { version = "0.14.0", features = ["cuda"] }
+#tch = { version = "0.15.0", features = ["cuda", "download-libtorch"] }
+
+# --- Essential Crates ---
+# Tokio for asynchronous runtime
+tokio = { version = "1", features = ["full"] }
+
+# Serde for serialization and deserialization
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
+serde_urlencoded = "0.7"
+
+# TOML for configuration files
+toml = "0.8"
+
+# Chrono for date and time
+chrono = { version = "0.4", features = ["serde"] }
+
+# Logging
+log = "0.4"
+env_logger = "0.10"
+
+# Error handling
+thiserror = "1.0"
+anyhow = "1.0"
+
+# --- Application-Specific Crates ---
+# Clap for command-line arguments
+clap = { version = "4.0", features = ["derive"] }
+
+# Teloxide for Telegram bot interactions
+teloxide = { version = "0.12.2", default-features = false, features = ["macros", "native-tls", "throttle", "ctrlc_handler"] }
+
+# HTTP client (reqwest is common, assuming it was used)
+reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false } # Using rustls-tls
+
+# Solana SDK (assuming you use the official one)
+solana-sdk = "1.18"
+solana-client = "1.18"
+solana-program = "1.18"
+spl-associated-token-account = "3.0"
+
+# Keyring for secure credential storage
+keyring = "2.3"
+
+# Crypto & Encoding
+ring = "0.17"
+base64 = "0.21"
+hex = "0.4" # Often used with crypto
+bincode = "1.3"
+
+# Metrics / Prometheus
+prometheus = { version = "0.13", features = ["process"] }
+# lazy_static or once_cell might be needed for global metric collectors
+lazy_static = "1.4"
+
+# CSV handling (we added this to tests/common, might be needed in main lib too)
+csv = "1.3"
+
+# Other missing dependencies identified from compile errors
+regex = "1.10"
+sysinfo = { version = "0.30.13", default-features = true }
+tempfile = "3.10"
+dotenv = "0.15"
+async-trait = "0.1.77"
+
+# Solana specific, if bs58 is used for key encoding/decoding
+bs58 = "0.5.0"
+
 
 # [profile.dev]
 # opt-level = 3 
